# buoyant

./: Cargo.toml
examples/espresso/: main.rs
examples/espresso/tab_view/: brew.rs  clean.rs  mod.rs  settings.rs
src/: font.rs  render_target.rs
src/font/: character_buffer_font.rs  embedded_mono_font.rs  rusttype.rs  u8g2.rs
src/render/: text.rs
src/render_target/: crossterm.rs  embedded_graphics.rs  fixed_text_buffer.rs
src/view/: foreach.rs  text.rs
src/view/text/: character_wrap.rs  word_wrap.rs
tests/embedded_graphics_target/: mod.rs  text.rs
tests/embedded_graphics_target/text/: precise_bounds_character_wrap.rs  precise_bounds_word_wrap.rs
